// Copyright (c) 2018 Anki, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License in the file LICENSE.txt or at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// External interface for robot <-> app and robot <-> sdk communication

syntax = "proto3";
package Anki.Vector.external_interface;
option go_package = "github.com/digital-dream-labs/vector-go-sdk/pkg/vectorpb";
option java_generic_services = true;


import "alexa.proto";
import "behavior.proto";
import "cube.proto";
import "messages.proto";
import "nav_map.proto";
import "settings.proto"; 
import "shared.proto";

// <p>The valid versions of the protocol.</p>
// <p>Protocol versions are updated when messages change significantly:
// new ones are added and removed, fields deprecated, etc.</p>
// <p>The goal is to support as many old versions as possible, only
// bumping the minimum when there is no way to handle a prior version.</p>
enum ProtocolVersion {
  option allow_alias = true;
  PROTOCOL_VERSION_UNKNOWN = 0; // Required zero value for enums
  PROTOCOL_VERSION_MINIMUM = 0; // Minimum supported version
  PROTOCOL_VERSION_CURRENT = 5; // Current version (incremented on 2019.03.12 for streaming update status support.)
}

// The grpc-defined connection between the SDK and Anki's Vector robot.
service ExternalInterface {
  // Checks the supported protocol version by passing in the client version and
  // minimum host version and receiving a response to see whether the versions are supported.
  rpc ProtocolVersion(ProtocolVersionRequest) returns (ProtocolVersionResponse) {

  }

  // SDK-only message to pass version info for device OS, Python version, etc.
  rpc SDKInitialization(SDKInitializationRequest) returns (SDKInitializationResponse) {

  }

  // Sets the speed and acceleration for Vector's wheel motors.
  rpc DriveWheels(DriveWheelsRequest) returns (DriveWheelsResponse) {}

  // Requests that Vector play an animation trigger.
  rpc PlayAnimationTrigger(PlayAnimationTriggerRequest) returns (PlayAnimationResponse) {}

  // Requests that Vector play an animation.
  rpc PlayAnimation(PlayAnimationRequest) returns (PlayAnimationResponse) {}

  // Constructs and returns a list of animations.
  rpc ListAnimations(ListAnimationsRequest) returns (ListAnimationsResponse) {

  }

  // Constructs and returns a list of animation triggers.
  rpc ListAnimationTriggers(ListAnimationTriggersRequest) returns (ListAnimationTriggersResponse) {

  }

  // Moves Vector's head.
  rpc MoveHead(MoveHeadRequest) returns (MoveHeadResponse) {}

  // Moves Vector's lift.
  rpc MoveLift(MoveLiftRequest) returns (MoveLiftResponse) {}
  
  // Stop all motor commands requested: MoveHead, MoveLift and DriveWheels.
  rpc StopAllMotors(StopAllMotorsRequest) returns (StopAllMotorsResponse) {}

  // Sets screen (Vector's face) to a solid color.
  rpc DisplayFaceImageRGB(DisplayFaceImageRGBRequest) returns (DisplayFaceImageRGBResponse) {

  }

  // Streaming events endpoint
  rpc EventStream(EventRequest) returns (stream EventResponse) {

  }

  // Play audio using Vector's speaker
  rpc ExternalAudioStreamPlayback(stream ExternalAudioStreamRequest) returns (stream ExternalAudioStreamResponse) {
  }

  // Integrate with and acquire control of Vector's AI system.
  rpc BehaviorControl(stream BehaviorControlRequest) returns (stream BehaviorControlResponse) {
  }

  // Acquire control of Vector's AI system.
  rpc AssumeBehaviorControl(BehaviorControlRequest) returns (stream BehaviorControlResponse) {

  }

  rpc CancelFaceEnrollment(CancelFaceEnrollmentRequest) returns (CancelFaceEnrollmentResponse) {

  }

  // Get a list of names and their IDs.
  rpc RequestEnrolledNames(RequestEnrolledNamesRequest) returns (RequestEnrolledNamesResponse) {

  }

  // Update the name enrolled for a given face.
  rpc UpdateEnrolledFaceByID(UpdateEnrolledFaceByIDRequest) returns (UpdateEnrolledFaceByIDResponse) {

  }

  // Erase the enrollment (name) record for the face with this ID.
  rpc EraseEnrolledFaceByID(EraseEnrolledFaceByIDRequest) returns (EraseEnrolledFaceByIDResponse) {

  }

  // Erase the enrollment (name) records for all faces.
  rpc EraseAllEnrolledFaces(EraseAllEnrolledFacesRequest) returns (EraseAllEnrolledFacesResponse) {

  }

  rpc SetFaceToEnroll(SetFaceToEnrollRequest) returns (SetFaceToEnrollResponse) {

  }

  rpc EnableMarkerDetection(EnableMarkerDetectionRequest) returns (EnableMarkerDetectionResponse) {

  }

  rpc EnableFaceDetection(EnableFaceDetectionRequest) returns (EnableFaceDetectionResponse) {

  }

  rpc EnableMotionDetection(EnableMotionDetectionRequest) returns (EnableMotionDetectionResponse) {

  }

  rpc EnableMirrorMode(EnableMirrorModeRequest) returns (EnableMirrorModeResponse) {

  }

  rpc EnableImageStreaming(EnableImageStreamingRequest) returns (EnableImageStreamingResponse) {

  }

  rpc IsImageStreamingEnabled(IsImageStreamingEnabledRequest) returns (IsImageStreamingEnabledResponse) {

  }

  // Cancel action by id
  rpc CancelActionByIdTag(CancelActionByIdTagRequest) returns (CancelActionByIdTagResponse) {

  }

  // Tells Vector to drive to the specified pose and orientation.
  rpc GoToPose(GoToPoseRequest) returns (GoToPoseResponse) {

  }

  // Tells Vector to dock with a light cube with a given approach angle and distance.
  rpc DockWithCube(DockWithCubeRequest) returns (DockWithCubeResponse) {

  }

  // Drive Vector off the charger.
  rpc DriveOffCharger(DriveOffChargerRequest) returns (DriveOffChargerResponse) {

  }

  // Drive Vector onto the charger.
  rpc DriveOnCharger(DriveOnChargerRequest) returns (DriveOnChargerResponse) {

  }

  // Make Vector look for faces by turning and angling his head
  rpc FindFaces(FindFacesRequest) returns (FindFacesResponse) {

  }

  // Make Vector look around in place by turning and moving his head
  rpc LookAroundInPlace(LookAroundInPlaceRequest) returns (LookAroundInPlaceResponse) {

  }
  
  // Make Vector roll his block, regardless of relative position and orientation
  rpc RollBlock(RollBlockRequest) returns (RollBlockResponse) {

  }

  // Get the photos info.
  rpc PhotosInfo(PhotosInfoRequest) returns (PhotosInfoResponse) {

  }

  // Get a photo by ID.
  rpc Photo(PhotoRequest) returns (PhotoResponse) {

  }

  // Get a thumbnail by ID.
  rpc Thumbnail(ThumbnailRequest) returns (ThumbnailResponse) {

  }

  // Delete a photo by ID.
  rpc DeletePhoto(DeletePhotoRequest) returns (DeletePhotoResponse) {

  }

  // Tells Vector to drive in a straight line.
  rpc DriveStraight(DriveStraightRequest) returns (DriveStraightResponse) {}

  // Turn the robot around its current position.
  rpc TurnInPlace(TurnInPlaceRequest) returns (TurnInPlaceResponse) {}

  // Tell Vector's head to move to a given angle.
  rpc SetHeadAngle(SetHeadAngleRequest) returns (SetHeadAngleResponse) {}

  // Tell Vector's lift to move to a given height.
  rpc SetLiftHeight(SetLiftHeightRequest) returns (SetLiftHeightResponse) {}

  // Tell Vector to turn towards this face.
  rpc TurnTowardsFace(TurnTowardsFaceRequest) returns (TurnTowardsFaceResponse) {}

  // Tell Vector to drive to the specified object.
  rpc GoToObject(GoToObjectRequest) returns (GoToObjectResponse) {}

  // Tell Vector to roll his cube.
  rpc RollObject(RollObjectRequest) returns (RollObjectResponse) {}

  // Tell Vector to "pop a wheelie" using his cube.
  rpc PopAWheelie(PopAWheelieRequest) returns (PopAWheelieResponse) {}

  // Instruct the robot to pick up the supplied object.
  rpc PickupObject(PickupObjectRequest) returns (PickupObjectResponse) {}

  // Ask Vector to place the object he is carrying on the ground at the current location.
  rpc PlaceObjectOnGroundHere(PlaceObjectOnGroundHereRequest) returns (PlaceObjectOnGroundHereResponse) {}

  // Set the Robot's master volume
  rpc SetMasterVolume(MasterVolumeRequest) returns (MasterVolumeResponse) {}

  rpc UserAuthentication(UserAuthenticationRequest) returns (UserAuthenticationResponse) {

  }

  // Check the current state of the battery.
  rpc BatteryState(BatteryStateRequest) returns (BatteryStateResponse) {

  }

  // Get the versioning information for Vector.
  rpc VersionState(VersionStateRequest) returns (VersionStateResponse) {

  }

  // Make Vector speak text.
  rpc SayText(SayTextRequest) returns (SayTextResponse) {

  }

  // Attempt to connect to a cube. If a cube is currently connected,
  // this will do nothing.
  rpc ConnectCube(ConnectCubeRequest) returns (ConnectCubeResponse) {

  }

  // Requests a disconnection from the currently connected cube.
  rpc DisconnectCube(DisconnectCubeRequest) returns (DisconnectCubeResponse) {

  }
  
  rpc CubesAvailable(CubesAvailableRequest) returns (CubesAvailableResponse) {

  }

  // Signal a connected cube to flash its lights using the default cube
  // flash animation.
  rpc FlashCubeLights(FlashCubeLightsRequest) returns (FlashCubeLightsResponse) {

  }

  // Forget the robot's preferred cube. This will cause the robot to
  // connect to the cube with the highest RSSI (signal strength) next
  // time a connection is requested. Saves this preference to disk.
  // The next cube that the robot connects to will become its
  // preferred cube.
  rpc ForgetPreferredCube(ForgetPreferredCubeRequest) returns (ForgetPreferredCubeResponse) {

  }

  // Set the robot's preferred cube and save it to disk. The robot
  // will always attempt to connect to this cube if it is available.
  // This is only used in simulation for now.
  rpc SetPreferredCube(SetPreferredCubeRequest) returns (SetPreferredCubeResponse) {

  }

  // Causes the robot to forget about custom objects it currently knows about.
  rpc DeleteCustomObjects(DeleteCustomObjectsRequest) returns (DeleteCustomObjectsResponse) {

  }

  // Creates a permanent custom object instance in the robot's world, with no connection to the vision system.
  rpc CreateFixedCustomObject(CreateFixedCustomObjectRequest) returns (CreateFixedCustomObjectResponse) {

  }

  // Creates a custom object with distinct custom marker(s).
  rpc DefineCustomObject(DefineCustomObjectRequest) returns (DefineCustomObjectResponse) {

  }

  // Set each of the lights on the currently connected cube based on two
  // rgb values each and timing data for how to transition between them.
  rpc SetCubeLights(SetCubeLightsRequest) returns (SetCubeLightsResponse) {}

  // Request an audio feed from the robot.
  rpc AudioFeed(AudioFeedRequest) returns (stream AudioFeedResponse) {

  }

  // Request a camera feed from the robot.
  rpc CameraFeed(CameraFeedRequest) returns (stream CameraFeedResponse) {

  }

  // Request a single image to be captured and sent from the robot.
  rpc CaptureSingleImage(CaptureSingleImageRequest) returns (CaptureSingleImageResponse) {

  }

  // Set Vector's eye color.
  rpc SetEyeColor(SetEyeColorRequest) returns (SetEyeColorResponse) {

  }

  // Stream navigation map data.
  rpc NavMapFeed(NavMapFeedRequest) returns (stream NavMapFeedResponse) {

  }


  rpc AppIntent(AppIntentRequest) returns (AppIntentResponse) {

  }  

  rpc GetOnboardingState(OnboardingStateRequest) returns (OnboardingStateResponse) {

  }

  rpc SendOnboardingInput(OnboardingInputRequest) returns (OnboardingInputResponse) {

  }  

  rpc GetLatestAttentionTransfer(LatestAttentionTransferRequest) returns (LatestAttentionTransferResponse) {

  }

  rpc PullJdocs(PullJdocsRequest) returns (PullJdocsResponse) {

  }

  rpc UpdateSettings(UpdateSettingsRequest) returns (UpdateSettingsResponse) {

  }

  rpc UpdateAccountSettings(UpdateAccountSettingsRequest) returns (UpdateAccountSettingsResponse) {

  }

  // StartUpdateEngine cycles the update-engine service (to start a new check for an update) and sets up a stream of 
  // UpdateStatusResponse Events.
  rpc StartUpdateEngine(CheckUpdateStatusRequest) returns (CheckUpdateStatusResponse) {

  }

  // CheckUpdateStatus tells if the robot is ready to reboot and update.
  rpc CheckUpdateStatus(CheckUpdateStatusRequest) returns (CheckUpdateStatusResponse) {

  }

  rpc UpdateAndRestart(UpdateAndRestartRequest) returns (UpdateAndRestartResponse) {

  }

  rpc CheckCloudConnection(CheckCloudRequest) returns (CheckCloudResponse) {

  }

  rpc GetFeatureFlag(FeatureFlagRequest) returns (FeatureFlagResponse) {

  }

  rpc GetFeatureFlagList(FeatureFlagListRequest) returns (FeatureFlagListResponse) {

  }

  rpc GetAlexaAuthState(AlexaAuthStateRequest) returns (AlexaAuthStateResponse) {

  }

  rpc AlexaOptIn(AlexaOptInRequest) returns (AlexaOptInResponse) {

  }  
}
